--- a/.github/workflows/rdp.yml
+++ b/.github/workflows/rdp.yml
@@ -5,6 +5,7 @@ on: [workflow_dispatch]
 jobs:
   build:
     runs-on: windows-latest
+
     steps:
       - name: Download and Setup ngrok
         shell: powershell
@@ -13,7 +14,7 @@ jobs:
           Expand-Archive ngrok.zip -DestinationPath .
           .\ngrok.exe authtoken 30q4MQK68KpdnH8IPF89v9c47sE_5YmwgBAvRsG2W893LAL6C
 
-      - name: Enable RDP and create user
+      - name: Enable RDP and Create User
         shell: powershell
         run: |
           net user admin123 P@ssw0rd123 /add
@@ -21,15 +22,30 @@ jobs:
           Set-ItemProperty -Path "HKLM:\System\CurrentControlSet\Control\Terminal Server" -Name "fDenyTSConnections" -Value 0
           Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
 
-      - name: Start ngrok TCP Tunnel for RDP
+      - name: Start ngrok and Show RDP Info
         shell: powershell
         run: |
-          Start-Process -NoNewWindow -FilePath .\ngrok.exe -ArgumentList "tcp 3389"
-          Start-Sleep -Seconds 15
-          $ngrokInfo = Invoke-RestMethod -Uri http://127.0.0.1:4040/api/tunnels
-          $rdpAddress = $ngrokInfo.tunnels.public_url -replace "tcp://", ""
-          Write-Host ""
-          Write-Host "Connect to your RDP:"
-          Write-Host "Address: $rdpAddress"
-          Write-Host "Username: admin123"
-          Write-Host "Password: P@ssw0rd123"
+          .\ngrok.exe tcp 3389 | Out-Null &
+          Start-Sleep -Seconds 10
+
+          $tunnel = $null
+          $tries = 0
+
+          while ($null -eq $tunnel -and $tries -lt 10) {
+            try {
+              $tunnel = Invoke-RestMethod -Uri http://127.0.0.1:4040/api/tunnels
+            } catch {
+              Start-Sleep -Seconds 2
+              $tries++
+            }
+          }
+
+          if ($tunnel -ne $null) {
+            $rdpAddress = $tunnel.tunnels[0].public_url -replace "tcp://", ""
+            Write-Host "`n🖥️  Connect to your RDP:"
+            Write-Host "➡️  Address: $rdpAddress"
+            Write-Host "👤  Username: admin123"
+            Write-Host "🔑  Password: P@ssw0rd123"
+          } else {
+            Write-Host "❌ ngrok tunnel not found. RDP setup failed."
+          }
